--- a/update/README.md.template
+++ b/update/README.md.template
@@ -70,7 +70,7 @@ appjail run -s burpsuite_open burpsuite
 
 | Tag      | Arch    | Version    | `burpsuite_version` |
 | -------- | ------- | ---------- | ------------------- |
-| `latest` | `amd64` | `bookworm` |      `2024.10.3`    |
+| `latest` | `amd64` | `%%OSVERSION%%` |      `%%VERSION%%`    |
 
 ## Notes
 
